# cfgable

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
python-config-style/: SKILL.md
python-config-style/evals/: evals.json
python-config-style/references/: hydra-app-config.md  pydantic-config.md  pydantic-settings-cli.md
src/cfgable/: __init__.py  _typing.py  _vendor.py  core.py  enums.py  frozen.py  hydra_utils.py  reflection.py
tests/: test_core.py  test_enums.py  test_frozen.py  test_hydra.py  test_reflection.py
